import and export keywords

--- a/02-JAVASCRIPT-REFRESHER/js-sandobx/index.html
+++ b/02-JAVASCRIPT-REFRESHER/js-sandobx/index.html
@@ -23,6 +23,6 @@
             <li>Essential Features Used By React</li>
             <li>Tricky Parts</li>
         </ul>
-        <script src="./scripts/app.js"></script>
+        <script src="./scripts/app.js" type="module"></script>
     </body>
 </html>
