--- a/02-JAVASCRIPT-REFRESHER/js-sanbox/index.html
+++ b/02-JAVASCRIPT-REFRESHER/js-sanbox/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>JavaScript Sandbox</title>
-        <link rel="stylesheet" href="main.css" />
-        <meta charset="UTF-8" />
-    </head>
+  <head>
+    <title>JavaScript Refresher</title>
+    <link rel="stylesheet" href="main.css" />
+    <meta charset="UTF-8" />
+    <script src="./scripts/app.js" defer></script>
+  </head>
 
-    <body>
-        <header>
-            <h1>JavaScript Sandbox</h1>
-        </header>
-        <script src="app.js"></script>
-    </body>
+  <body>
+    <header>
+      <h1>JavaScript Playground</h1>
+    </header>
+  </body>
 </html>
